# ColorScaleFilter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
ColorScaleFilter/: CMakeLists.txt  ColorScaleFilter.cpp  ColorScaleFilter.h  Macros.h
